# continue-retool

./: .gitignore  ARCHITECTURE.md  IMPROVEMENT_PLAN.md  README.md  continue-mcp-token-strategy.md  continue-mcp-toolkit.md  ruff.toml
.github/workflows/: ci.yml
continue-mcp/: .gitignore  README.md  install-workspace.py  pyproject.toml  servers.json
continue-mcp/bench/: audit.py  schema-metrics.json
continue-mcp/continue_mcp_common/: __init__.py  config.py  metadata.py  paths.py  results.py
continue-mcp/edit-mcp/: README.md  pyproject.toml
continue-mcp/edit-mcp/.continue/mcpServers/: edit.yaml
continue-mcp/edit-mcp/edit_mcp/: matcher.py  server.py
continue-mcp/edit-mcp/tests/: conftest.py  test_matcher.py  test_mcp_surface.py
continue-mcp/fs-mcp/: README.md  pyproject.toml
continue-mcp/fs-mcp/.continue/mcpServers/: fs.yaml
continue-mcp/fs-mcp/fs_mcp/: server.py
continue-mcp/fs-mcp/tests/: conftest.py  test_fs.py  test_mcp_surface.py
continue-mcp/gateway-mcp/: README.md  gateway.config.json  pyproject.toml
continue-mcp/gateway-mcp/.continue/mcpServers/: gateway.yaml
continue-mcp/gateway-mcp/gateway_mcp/: registry.py  server.py
continue-mcp/gateway-mcp/tests/: conftest.py  downstream_server.py  test_mcp_surface.py  test_registry.py
continue-mcp/hello-mcp/: README.md  pyproject.toml
continue-mcp/hello-mcp/.continue/mcpServers/: hello.yaml
continue-mcp/hello-mcp/hello_mcp/: __init__.py  server.py
continue-mcp/hello-mcp/tests/: conftest.py  test_hello.py  test_mcp_surface.py
continue-mcp/notes-mcp/: README.md  pyproject.toml
continue-mcp/notes-mcp/.continue/mcpServers/: notes.yaml
continue-mcp/notes-mcp/notes_mcp/: server.py
continue-mcp/notes-mcp/tests/: test_mcp_surface.py  test_notes.py
continue-mcp/rules/: README.md  notes.md  rule-rule.md
continue-mcp/scripts/: register_server.py  run_server_tests.py  sync_metadata.py  update_dependencies.py
continue-mcp/search-mcp/: README.md  pyproject.toml
continue-mcp/search-mcp/.continue/mcpServers/: search.yaml
continue-mcp/search-mcp/search_mcp/: server.py
continue-mcp/search-mcp/tests/: conftest.py  test_mcp_surface.py  test_search.py
continue-mcp/shell-mcp/: README.md  pyproject.toml
continue-mcp/shell-mcp/.continue/mcpServers/: shell.yaml
continue-mcp/shell-mcp/shell_mcp/: __init__.py  server.py
continue-mcp/shell-mcp/tests/: conftest.py  test_mcp_surface.py  test_tools.py
continue-mcp/skills/new-mcp-tool/: SKILL.md
continue-mcp/sql-mcp/: README.md  pyproject.toml
continue-mcp/sql-mcp/.continue/mcpServers/: sql.yaml
continue-mcp/sql-mcp/sql_mcp/: default.sqruff  server.py
continue-mcp/sql-mcp/tests/: test_mcp_surface.py  test_sql.py
continue-mcp/tests/: test_installer.py  test_metadata.py  wheel_smoke.py
docs/: architecture.html  continue-mcp-token-strategy.html  continue-mcp-toolkit.html  index.html
docs/adr/: 0001-unified-distribution.md  0002-tool-authority-and-workspace-boundaries.md  0003-direct-and-gateway-registration.md  0004-safe-mutation-and-bounded-execution.md  README.md
docs/history/: continue-mcp-toolkit-design.md  repository-improvement-plan-2026-07.md
