[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "continue-mcp"
version = "0.1.0"
description = "A unified collection of focused MCP servers for Continue.dev"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=3,<4",
  "sqruff>=0.39",
]

[project.optional-dependencies]
test = ["pytest>=8"]
rg = ["ripgrep-bin==15.2.0"]

[project.scripts]
# BEGIN GENERATED SERVER ENTRY POINTS
hello-mcp = "hello_mcp.server:main"
shell-mcp = "shell_mcp.server:main"
search-mcp = "search_mcp.server:main"
edit-mcp = "edit_mcp.server:main"
fs-mcp = "fs_mcp.server:main"
sql-mcp = "sql_mcp.server:main"
notes-mcp = "notes_mcp.server:main"
gateway-mcp = "gateway_mcp.server:main"
# END GENERATED SERVER ENTRY POINTS

[tool.hatch.build.targets.wheel]
packages = [
  "continue_mcp_common",
# BEGIN GENERATED SERVER PACKAGES
  "hello-mcp/hello_mcp",
  "shell-mcp/shell_mcp",
  "search-mcp/search_mcp",
  "edit-mcp/edit_mcp",
  "fs-mcp/fs_mcp",
  "sql-mcp/sql_mcp",
  "notes-mcp/notes_mcp",
  "gateway-mcp/gateway_mcp",
# END GENERATED SERVER PACKAGES
]

[tool.hatch.build.targets.wheel.force-include]
"servers.json" = "continue_mcp_common/servers.json"
