[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "edit-mcp"
version = "0.1.0"
description = "Robust Unicode-aware file-edit MCP for Continue.dev (replaces built-in Create/Edit file)"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3,<4"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
edit-mcp = "edit_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["edit_mcp"]
