# shell-mcp packaging.
#
# Two modes, one file:
#   * Pure-Python today  -> comment out [tool.maturin] and use a normal backend.
#   * Rust core later     -> maturin builds shell_mcp._core from src/lib.rs into
#                            the same wheel, installed by `uv` with no Rust
#                            toolchain on the target machine (the `rip` pattern).
#
# Start pure-Python; flip on the maturin half when a profiler says a hot path
# (e.g. Windows tree-kill, high-throughput output buffering) needs native code.

[build-system]
requires = ["maturin>=1.5"]
build-backend = "maturin"

[project]
name = "shell-mcp"
version = "0.1.0"
description = "Background-job terminal runner MCP for Continue.dev (bash + PowerShell)"
requires-python = ">=3.11"
dependencies = ["fastmcp>=2"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
# This is the console script Continue launches (see .continue/mcpServers/shell.yaml).
shell-mcp = "shell_mcp.server:main"

# --- Rust core (optional; enable when you add src/lib.rs) ------------------
[tool.maturin]
# module-name = "shell_mcp._core"
# features = ["pyo3/extension-module"]
python-source = "."
