[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shell-mcp"
version = "0.1.0"
description = "Background-job terminal runner MCP for Continue.dev (bash + PowerShell)"
requires-python = ">=3.11"
dependencies = ["fastmcp>=3,<4"]

[project.optional-dependencies]
test = ["pytest>=8"]

[project.scripts]
# This is the console script Continue launches (see .continue/mcpServers/shell.yaml).
shell-mcp = "shell_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["shell_mcp"]
